# PandoraLauncher

./: Cargo.toml  README.md
.github/workflows/: cd.yml
crates/auth/: Cargo.toml  README.txt
crates/backend/: Cargo.toml
crates/backend/src/: backend.rs  backend_filesystem.rs  backend_handler.rs  directories.rs  install_content.rs  instance.rs  launch.rs  launch_wrapper.rs  lib.rs  log_reader.rs
crates/backend/src/metadata/: manager.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: game_output.rs  handle.rs  instance.rs  keep_alive.rs  lib.rs  message.rs  modal_action.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: lib.rs  png_render_cache.rs  root.rs  ui.rs
crates/frontend/src/component/: error_alert.rs  instance_list.rs  mod.rs
crates/frontend/src/entity/: instance.rs  mod.rs  version.rs
crates/frontend/src/game_output/: mod.rs
crates/frontend/src/modals/: launch.rs
crates/frontend/src/pages/: debug_page.rs  instances_page.rs  mod.rs  modrinth_page.rs
crates/frontend/src/pages/instance/: instance_page.rs  mod.rs  mods_subpage.rs  quickplay_subpage.rs
crates/nbt/src/: decode.rs  encode.rs  lib.rs  pretty.rs  reference.rs
crates/nbt/src/stringified/: from_snbt.rs  to_snbt.rs
crates/pandora_launcher/: Cargo.toml
crates/pandora_launcher/src/: main.rs  panic.rs
crates/schema/: Cargo.toml
crates/schema/src/: assets_index.rs  fabric_launch.rs  fabric_loader_manifest.rs  java_runtime_component.rs  java_runtimes.rs  lib.rs  loader.rs  version.rs  version_manifest.rs
wrapper/: build.sh
(+1 files in other folders)
